--- a/src/locale/ja/LC_MESSAGES/backend.po
+++ b/src/locale/ja/LC_MESSAGES/backend.po
@@ -973,6 +973,12 @@ msgstr "プッシュ通知機能"
 msgid "Introduction to Push Notification"
 msgstr "プッシュ通知"
 
+#: ../doc/backend/manual/push_notification/overview.rst:7
+msgid ""
+"For release and ad-hoc builds on Cordova 6.2 platform, please select the "
+"release build option when sending push notifications."
+msgstr ""
+
 #: ../doc/backend/manual/push_notification/overview.rst:11
 msgid "What is Push Notification?"
 msgstr "プッシュ通知とは"
