--- a/src/locale/ja/LC_MESSAGES/onsenui.po
+++ b/src/locale/ja/LC_MESSAGES/onsenui.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-11-07 07:18+0000\n"
-"Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
+"PO-Revision-Date: 2016-11-08 03:04+0000\n"
+"Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -68,7 +68,7 @@ msgid ""
 "framework type since it requires to transpile the source code to Javascript."
 " Therefore, you need to setup the local environment with :ref:`Monaca "
 "CLI<cli_overview>`."
-msgstr "現在、Monaca クラウド IDE 上では、Onsen UI コンポーネントと Angular 2 フレームワークを併用したテンプレートを提供していません。Monaca クラウド IDE では、ソースコースから JavaScript への変換処理 ( トランスパイル/transpile ) を現在サポートしていないためです。なお、:ref:`Monaca CLI<cli_overview>` ( ローカル環境用の開発ツール ) では、このタイプのテンプレートをリリースしています。"
+msgstr "現在、Monaca クラウド IDE 上では、Onsen UI コンポーネントと Angular 2 フレームワークを連携させたテンプレートを提供していません。Monaca クラウド IDE では、ソースコードから JavaScript へのコード変換 ( トランスパイル/transpile ) を現在サポートしていないためです。なお、:ref:`Monaca CLI<cli_overview>` ( ローカル環境用の開発ツール ) では、このタイプのテンプレートをリリースしています。"
 
 #: ../doc/onsenui/manual/index.rst:46
 msgid "Where to go from here"
@@ -79,7 +79,7 @@ msgid ""
 "Now you have Onsen UI installed. See examples in `Onsen UI Docs "
 "<http://onsenui.io/guide/overview.html>`_  for how to use Onsen UI "
 "components."
-msgstr "ここまでの手順で、Onsen UI のインストールが完了しました。Onsen UI コンポーネントの使用方法とサンプルに関しては `Onsen UI ドキュメント <https://ja.onsen.io/v1/guide.html>`_  をご確認ください。"
+msgstr "ここまでの手順で、Onsen UI のインストールが完了しました。Onsen UI コンポーネントの使用方法とサンプルに関しては、`Onsen UI ドキュメント <https://ja.onsen.io/v1/guide.html>`_ をご確認ください。"
 
 #: ../doc/onsenui/samples/index.rst:3
 msgid "Samples"
@@ -89,7 +89,7 @@ msgstr "サンプルアプリ"
 msgid ""
 "Please refer to `the samples on Onsen UI website "
 "<https://onsen.io/samples/>`_."
-msgstr "`こちらのページ ( Onsen UI のページ ) <https://onsen.io/samples/>`_ でサンプルをご確認ください。"
+msgstr "`こちらのページ <https://onsen.io/samples/>`_ でサンプルをご確認ください。"
 
 #: ../doc/onsenui/tutorial/index.rst:3
 msgid "Onsen UI Tutorial"
@@ -99,4 +99,4 @@ msgstr "Onsen UI チュートリアル"
 msgid ""
 "Please refer to `the tutorial on Onsen UI website "
 "<https://onsen.io/tutorial/>`_."
-msgstr "`こちらのページ ( Onsen UI のページ ) <https://onsen.io/tutorial/>`_ で Onsen UI を試してみましょう ( 実際のコードに触れてみるハンドオン形式です )。"
+msgstr "`こちらのページ <https://onsen.io/tutorial/>`_ で Onsen UI を試してみましょう ( 実際のコードに触れてみるハンドオン形式で、Onsen UI を学べます )。"
