[pofile] Reflected translation.

--- a/src/locale/ja/LC_MESSAGES/backend.po
+++ b/src/locale/ja/LC_MESSAGES/backend.po
@@ -977,7 +977,7 @@ msgstr "プッシュ通知"
 msgid ""
 "For release and ad-hoc builds on Cordova 6.2 platform, please select the "
 "release build option when sending push notifications."
-msgstr ""
+msgstr "Cordova6.2プロジェクトでアドホックビルドしたアプリに対しては、リリースを選択する必要があります。"
 
 #: ../doc/backend/manual/push_notification/overview.rst:11
 msgid "What is Push Notification?"
