[update] Updated push notification pages as suggested by Watanabe-san and Keiji-san.

--- a/src/locale/ja/LC_MESSAGES/manual.po
+++ b/src/locale/ja/LC_MESSAGES/manual.po
@@ -999,6 +999,12 @@ msgstr "プッシュ通知機能"
 msgid "Introduction to Push Notification"
 msgstr "プッシュ通知"
 
+#: ../doc/manual/backend/push_notification/overview.rst:7
+msgid ""
+"For release and ad-hoc builds on Cordova 6.2 platform, please select the "
+"release build option when sending push notifications."
+msgstr "Cordova6.2プロジェクトでアドホックビルドしたアプリに対しては、リリースを選択する必要があります。"
+
 #: ../doc/manual/backend/push_notification/overview.rst:11
 msgid "What is Push Notification?"
 msgstr "プッシュ通知とは"
