--- a/src/locale/ja/LC_MESSAGES/onsenui.po
+++ b/src/locale/ja/LC_MESSAGES/onsenui.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-11-07 03:31+0000\n"
+"PO-Revision-Date: 2016-11-25 03:23+0000\n"
 "Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
@@ -64,7 +64,7 @@ msgid ""
 "framework type since it requires to transpile the source code to Javascript."
 " Therefore, you need to setup the local environment with :ref:`Monaca "
 "CLI<cli_overview>`."
-msgstr "現在、Monaca クラウド IDE 上では、Onsen UI コンポーネントと Angular 2 フレームワークを併用したテンプレートを提供していません。Monaca クラウド IDE では、ソースコースから JavaScript への変換処理 ( トランスパイル/transpile ) を現在サポートしていないためです。なお、:ref:`Monaca CLI<cli_overview>` ( ローカル環境用の開発ツール ) では、このタイプのテンプレートをリリースしています。"
+msgstr "現在、Monaca クラウド IDE 上では、Onsen UI コンポーネントと Angular 2 フレームワークを連携させたテンプレートを提供していません。Monaca クラウド IDE では、ソースコードから JavaScript へのコード変換 ( トランスパイル/transpile ) を現在サポートしていないためです。なお、:ref:`Monaca CLI<cli_overview>` ( ローカル環境用の開発ツール ) では、このタイプのテンプレートをリリースしています。"
 
 #: ../doc/onsenui/index.rst:46
 msgid "Where to go from here"
@@ -75,4 +75,4 @@ msgid ""
 "Now you have Onsen UI installed. See examples in `Onsen UI Docs "
 "<http://onsenui.io/guide/overview.html>`_  for how to use Onsen UI "
 "components."
-msgstr "ここまでの手順で、Onsen UI のインストールが完了しました。Onsen UI コンポーネントの使用方法とサンプルに関しては `Onsen UI ドキュメント <https://ja.onsen.io/v1/guide.html>`_  をご確認ください。"
+msgstr "ここまでの手順で、Onsen UI のインストールが完了しました。Onsen UI コンポーネントの使用方法とサンプルに関しては、`Onsen UI ドキュメント <https://ja.onsen.io/v1/guide.html>`_ をご確認ください。"
