[update] Making Monaca Docs top page with the same style as Monaca top page.

--- a/src/locale/ja/LC_MESSAGES/onsenui.po
+++ b/src/locale/ja/LC_MESSAGES/onsenui.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-11-25 05:17+0000\n"
+"PO-Revision-Date: 2016-11-30 02:52+0000\n"
 "Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
@@ -25,7 +25,7 @@ msgstr "Onsen UI"
 
 #: ../doc/onsenui/manual/index.rst:2
 msgid "Manual"
-msgstr ""
+msgstr "マニュアル"
 
 #: ../doc/onsenui/manual/index.rst:12
 msgid "HTML5 Framework for Building Mobile App Front End"
@@ -83,20 +83,20 @@ msgstr "ここまでの手順で、Onsen UI のインストールが完了しま
 
 #: ../doc/onsenui/samples/index.rst:3
 msgid "Samples"
-msgstr ""
+msgstr "サンプルアプリ"
 
 #: ../doc/onsenui/samples/index.rst:5
 msgid ""
 "Please refer to `the samples on Onsen UI website "
 "<https://onsen.io/samples/>`_."
-msgstr ""
+msgstr "`こちらのページ <https://onsen.io/samples/>`_ でサンプルをご確認ください。"
 
 #: ../doc/onsenui/tutorial/index.rst:3
 msgid "Onsen UI Tutorial"
-msgstr ""
+msgstr "Onsen UI チュートリアル"
 
 #: ../doc/onsenui/tutorial/index.rst:5
 msgid ""
 "Please refer to `the tutorial on Onsen UI website "
 "<https://onsen.io/tutorial/>`_."
-msgstr ""
+msgstr "`こちらのページ <https://onsen.io/tutorial/>`_ で Onsen UI を試してみましょう ( 実際のコードに触れてみるハンドオン形式で、Onsen UI を学べます )。"
