[pofile] reflect translation.

--- a/src/locale/ja/LC_MESSAGES/debugger.po
+++ b/src/locale/ja/LC_MESSAGES/debugger.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Monaca 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: fabbygoh <fabbygoh@gmail.com>, 2016\n"
+"Last-Translator: Masakazu Watabe <watabe08@gmail.com>, 2016\n"
 "Language-Team: Japanese (https://www.transifex.com/monaca/teams/61343/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1832,4 +1832,4 @@ msgstr "サンプル＆Tip"
 
 #: ../doc/debugger/tutorial/index.rst:3
 msgid "Monaca Debugger Tutorial"
-msgstr "Monaca デバッガーチュートリアル"
+msgstr "Monaca デバッガー チュートリアル"
