--- a/src/locale/ja/LC_MESSAGES/onsenui.po
+++ b/src/locale/ja/LC_MESSAGES/onsenui.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-11-30 02:52+0000\n"
-"Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
+"PO-Revision-Date: 2016-12-06 01:05+0000\n"
+"Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -99,4 +99,4 @@ msgstr "Onsen UI チュートリアル"
 msgid ""
 "Please refer to `the tutorial on Onsen UI website "
 "<https://onsen.io/tutorial/>`_."
-msgstr "`こちらのページ <https://onsen.io/tutorial/>`_ で Onsen UI を試してみましょう ( 実際のコードに触れてみるハンドオン形式で、Onsen UI を学べます )。"
+msgstr "`こちらのページ <https://onsen.io/tutorial/>`_ で Onsen UI を試してみましょう ( 実際のコードに触れてみるハンズオン形式で、Onsen UI を学べます )。"
