--- a/src/locale/ja/LC_MESSAGES/power_plugins.po
+++ b/src/locale/ja/LC_MESSAGES/power_plugins.po
@@ -228,7 +228,8 @@ msgid ""
 "Developers can choose the encrypted directories other than www. For example,"
 " “www/data, www/js” etc."
 msgstr ""
-"暗号化の対象として、www 配下のディレクトリーを、細かく指定することができます。たとえば、 “www/data、www/js” を指定できます。"
+"暗号化の対象として、www 配下のディレクトリーを、細かく指定することができます。たとえば、 “www/data”、”www/js” "
+"などと指定できます。"
 
 #: ../doc/power_plugins/manual/html5_resource_encryption.rst:26
 msgid ""
@@ -350,8 +351,8 @@ msgid ""
 "In order to enable manual decryption, please set ``AUTO_DECRYPT`` to ``0`` "
 "in the plugin configuration (Step 4 in the previous section)."
 msgstr ""
-"手動での復号化を有効にする場合、上記の手順 ( 「 プラグインの追加方法 」 の 4 番目の手順 ) で解説した ``AUTO_DECRYPT`` を "
-"``0`` に設定します。"
+"手動での復号化を有効にする場合、上記の手順 ( 「 プラグインの追加方法 」 の 4 番目の手順 ) で解説した ``AUTO_DECRYPT`` "
+"を、``0`` に設定します。"
 
 #: ../doc/power_plugins/manual/html5_resource_encryption.rst:107
 msgid "Step 2: Getting the Hash Code for Decryption"
@@ -363,7 +364,7 @@ msgid ""
 "function to decrypt the target folder(s). In order to find the hash code, "
 "please do as follows:"
 msgstr ""
-"``monaca.Encrypt.setDecryptHash()`` 関数 ( フォルダーの復号化 用 ) "
+"``monaca.Encrypt.setDecryptHash()`` 関数 ( フォルダーの復号化用 ) "
 "を呼ぶときには、次のハッシュ値が必要となります。ハッシュ値の取得方法を、次に記します。"
 
 #: ../doc/power_plugins/manual/html5_resource_encryption.rst:111
@@ -388,7 +389,7 @@ msgstr "お好きなテキストエディターを開き、ビルドログの内
 
 #: ../doc/power_plugins/manual/html5_resource_encryption.rst:137
 msgid "Step 3: Calling the Decryption Function"
-msgstr "ステップ 3 : 復号化 用の関数を実行する"
+msgstr "ステップ 3 : 復号化用の関数を実行する"
 
 #: ../doc/power_plugins/manual/html5_resource_encryption.rst:139
 msgid ""
@@ -396,7 +397,7 @@ msgid ""
 "The function needs to be called inside the ``deviceready`` event. For "
 "example:"
 msgstr ""
-"上記の手順までで、復号化 用の関数を使用する準備ができました。なお、この関数は、次のように、``deviceready`` "
+"ここまでの手順で、復号化用の関数を使用する準備ができました。なお、この関数は、次のように、``deviceready`` "
 "イベント内で、実行する必要があります。"
 
 #: ../doc/power_plugins/manual/html5_resource_encryption.rst:151
@@ -405,12 +406,12 @@ msgid ""
 "For security concern, you can also hide it by loading the value from the "
 "server and use it under a parameter."
 msgstr ""
-"上記の例では、ハッシュ値を、直接、関数内に記述しています。セキュリティーを強化する場合には、適宜、処理 ( "
-"サーバー側からこの値を取得し、なんらかのパラメーターに代入し、隠してから使用するなど ) を工夫する必要があります。"
+"上記の例では、ハッシュ値を、直接、関数内に記述しています。セキュリティーを強化する場合には、適宜、処理を工夫する必要があります ( "
+"サーバー側からこの値を取得し、なんらかのパラメーターに代入し、隠してから使用するなど )。"
 
 #: ../doc/power_plugins/manual/html5_resource_encryption.rst:167
 msgid "For Cordova 5.2 or Lower Projects"
-msgstr "Cordova 5.2、または、それ以前のバージョン向けのプロジェクトで使用する場合"
+msgstr "Cordova 5.2 向け、または、それ以前のバージョンを使用したプロジェクトで使用する場合"
 
 #: ../doc/power_plugins/manual/html5_resource_encryption.rst:172
 msgid "Cordova 5.2 or lower"
